# DICE-Flow

./: .gitattributes  .gitignore  CMakeLists.txt  PYTHON_README.md  README.md  TECHNICAL_DOCUMENTATION.md  config.yaml  dual_dataset_analysis.py  fitness_analysis.py  post_analysis.py  requirements.txt  run_pipeline.sh  survival_validation.py  validation_pipeline.py
data/known_genes/: cosmic_census.txt  depmap_fitness_pca.txt  disgenet_prostate.txt
data/processed/: candidate_genes.txt  dea_filtered_genes.txt  final_candidates.txt
data/processed/networks/: kegg_interactions.txt
data/raw/: clinical_data.csv
data/raw/expression/: expression_normal.txt
data/raw/kegg/: hsa00010.xml  hsa00030.xml  hsa00040.xml  hsa00051.xml  hsa00052.xml  hsa00053.xml  hsa00220.xml  hsa00260.xml  hsa00310.xml  hsa00350.xml  hsa00360.xml  hsa00380.xml  hsa00510.xml  hsa00513.xml  hsa00541.xml  hsa00561.xml  hsa00562.xml  hsa00564.xml  hsa00565.xml  hsa00591.xml  hsa00600.xml  hsa00620.xml  hsa00630.xml  hsa00640.xml  hsa00650.xml  (+31 more)
data/results/: centrality_normal.txt  centrality_tumor.txt  dea_results_table.txt  dice_genes.txt  dice_genes_test_bugfix.txt  dice_genes_test_bugfix_top500.txt  dice_genes_top500.txt  genes_for_knockout.txt  knockout_analysis.txt
src/cpp/: engine  engine.hpp  main.cpp
src/python/: app.py  dea_filter.py  differential_centrality.py  export_results.py  merge_networks.py  parse_biogrid.py  parse_kegg.py  pre_filter.py  server.py  validate_candidates.py  weight_network.py
web/: index.html  package-lock.json  package.json
web/src/: App.jsx  index.css
(+31 files in other folders)
